--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-device-info": "^10.8.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-i18n": "^2.0.15",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-localize": "^3.0.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
