--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -32,6 +32,7 @@
     "react-native-localize": "^3.0.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
+    "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-svg": "^13.10.0",
