--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-localize": "^3.0.2",
     "react-native-pager-view": "^6.2.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
