--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        googlePlayServicesAuthVersion = "19.2.0" // <--- use this version or newer
     }
     repositories {
         google()
@@ -17,5 +18,19 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath 'com.android.tools.build:gradle:4.2.2' // <--- use this version or newer
+        classpath 'com.google.gms:google-services:4.3.15' // <--- use this version or newer
+    }
+}
+
+allprojects {
+  repositories {
+        mavenLocal()
+        google() // <--- make sure this is included
+        jcenter()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "$rootDir/../node_modules/react-native/android"
+        }
     }
 }
