--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
