--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-device-info": "^10.8.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-i18n": "^2.0.15",
@@ -37,6 +38,7 @@
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
+    "react-native-redash": "14.2.3",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
