--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-localize": "^3.0.2",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
@@ -50,7 +51,8 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
