--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/messaging": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -21,8 +23,9 @@
     "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@yz1311/react-native-intent-launcher": "^0.3.4",
     "axios": "^1.4.0",
-    "expo-av": "^13.6.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "native-base": "^3.4.28",
@@ -32,28 +35,36 @@
     "react-native": "0.72.3",
     "react-native-circular-progress": "^1.3.9",
     "react-native-device-info": "^10.8.0",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-picker": "^7.0.0",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-localize": "^3.0.2",
+    "react-native-media-controls": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
+    "react-native-permissions": "^3.9.2",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-redash": "14.2.3",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
