--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-redash": "14.2.3",
+    "react-native-render-html": "^6.3.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
