--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-native": "0.72.3",
     "react-native-circular-progress": "^1.3.9",
     "react-native-device-info": "^10.8.0",
